# Predict-Sales-Product

./: main.py  pyproject.toml
productsalespredict/: encoder1.sav  encoder2.sav  model.sav  scaler1.sav  scaler2.sav
tests/: data_train.json  model.py
