[tool.poetry]
name = "productsalespredict"
version = "0.1.0"
description = ""
authors = ["Michkail <55208634+Michkail@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.27.1"
fastapi = "^0.109.2"
pandas = "^2.2.0"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
